[wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[flake8]
exclude =
    tests/fake_packages,
show-source = True
max-line-length = 80

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/*

[tool:pytest]
python_files = test_*.py
testpaths =
    src/plaster
    tests
