[wheel]
universal = 1

[metadata]
name = plaster
version = 1.1.2
author = Michael Merickel
author_email = pylons-discuss@googlegroups.com
description = A loader interface around multiple config file formats.
keywords = plaster, pastedeploy, ini, config
url = https://docs.pylonsproject.org/projects/plaster/en/latest/
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license_files = LICENSE.txt

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
    importlib-metadata; python_version<"3.8"
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx
    pylons-sphinx-themes
testing =
    pytest
    pytest-cov

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/**
